--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </section>
 
-      <section class="acordeon aberto">
+      <section class="acordeon">
         <button class="acionar"><h2>Skills</h2></button>
       <div class="content">
         <div class="skills">
