--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
           <li>
             <img src="./assets/img/js.svg" alt="javascript" title="javascript"> 
           </li>
+          <li>
+            <img src="./assets/img/react.svg" alt="react" title="react"> 
+          </li>
         </ul>
       </section>
       <section class="personal">
