--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link href="./assets/font/NeueMachina-Regular.otf" rel="stylesheet" />
-    <link rel="stylesheet" href="./assets/css/global.css" />
-    <link rel="stylesheet" href="./assets/css/header.css" />
-    <link rel="stylesheet" href="./assets/css/acordeon.css" />
-    <link rel="stylesheet" href="./assets/css/idiomas.css" />
+    <link href="./font/NeueMachina-Regular.otf" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/acordeon.css" />
+    <link rel="stylesheet" href="./css/idiomas.css" />
     <link rel="stylesheet" href="./assets/css/potifolio.css" />
-    <link rel="stylesheet" href="./assets/css/experiência.css">
-    <link rel="stylesheet" href="./assets/css/skil.css">
+    <link rel="stylesheet" href="./css/experiência.css">
+    <link rel="stylesheet" href="./css/skil.css">
 
     <title>Portifólio Danil Alves S</title>
   </head>
@@ -31,7 +31,7 @@
   <body>
     <main class="principal">
       <header class="header">
-        <img class="foto" src="./assets/img/eu (2).jpg" alt="Foto do Daniel" />
+        <img class="foto" src="./img/eu (2).jpg" alt="Foto do Daniel" />
 
         <h1 class="titulo">Óla, <br />eu Sou o Daniel</h1>
 
@@ -67,19 +67,19 @@
         <h3>Ferramentas: </h3>
         <ul>
           <li>
-            <img src="./assets/img/html.svg" alt="html" title="html"> 
+            <img src="./img/html.svg" alt="html" title="html"> 
           </li>
           <li>
-            <img src="./assets/img/css.svg" alt="css" title="css"> 
+            <img src="./img/css.svg" alt="css" title="css"> 
           </li>
           <li>
-            <img src="./assets/img/git.svg" alt="github" title="github"> 
+            <img src="./img/git.svg" alt="github" title="github"> 
           </li>
           <li>
-            <img src="./assets/img/js.svg" alt="javascript" title="javascript"> 
+            <img src="./img/js.svg" alt="javascript" title="javascript"> 
           </li>
           <li>
-            <img src="./assets/img/react.svg" alt="react" title="react"> 
+            <img src="./img/react.svg" alt="react" title="react"> 
           </li>
         </ul>
       </section>
@@ -140,6 +140,6 @@
       </section>  
     </main>
 
-    <script src="./assets/js/acordeon.js"></script>
+    <script src="./js/acordeon.js"></script>
   </body>
 </html>
