--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/acordeon.css" />
     <link rel="stylesheet" href="./css/idiomas.css" />
-    <link rel="stylesheet" href="./assets/css/potifolio.css" />
+    <link rel="stylesheet" href="./css/potifolio.css" />
     <link rel="stylesheet" href="./css/experiência.css">
     <link rel="stylesheet" href="./css/skil.css">
 
-    <title>Portifólio Danil Alves S</title>
+    <title> Portifólio Danil Alves </title>
   </head>
 
   <body>
     <main class="principal">
       <header class="header">
-        <img class="foto" src="./img/eu (2).jpg" alt="Foto do Daniel" />
+        <img class="foto" src="./img/eu.jpg" alt="Foto do Daniel" />
 
         <h1 class="titulo">Óla, <br />eu Sou o Daniel</h1>
 
